<resources>
    <string name="app_name">DARK Sky</string>
    <string name="open" translatable="false">Open</string>
    <string name="close" translatable="false">Close</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="city_name">City Name</string>
    <string name="txt_date">fri 26 feb</string>
    <string name="txt_weather">sunny</string>
    <string name="temprature" translatable="false">16</string>
    <string name="temprature_unit" translatable="false">ْ C</string>
    <string name="pressure_value" translatable="false">1006 hpa</string>
    <string name="txt_pressure">pressure</string>
    <string name="himidiatly_value" translatable="false">100 %</string>
    <string name="txt_himiditly">Himidity</string>
    <string name="wind_value" translatable="false">2.69 m/s</string>
    <string name="txt_wind">Wind</string>
    <string name="cloud_value" translatable="false">98 %</string>
    <string name="txt_cloud">Cloud</string>
    <string name="ultra_violate_value" translatable="false">0.0</string>
    <string name="txt_ultra_violata">Ultra Violata</string>
    <string name="visibilty_value" translatable="false">115 m</string>
    <string name="txt_visibilty">Visibilty</string>
    <string name="txt_day">Sun</string>
    <string name="daily_status">clear sky</string>
    <string name="language">Language</string>
    <string name="location">Location</string>
    <string name="units">Units</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="map">Map</string>
    <string name="gps">current location</string>
    <string name="celsius">Celsius  ||  m/s</string>
    <string name="fahrenheit">Fahrenheit || m/h</string>
    <string name="kelvin">kelvin  || m/s</string>
    <string name="setting">Setting</string>
    <string name="alert">Alert</string>
    <string name="favorite">Favorite</string>
    <string name="home">Home</string>
    <string name="map_title">MAP</string>
    <string name="time_picker">choose time</string>
    <string name="date_picker">choose date</string>
    <string name="current_toast">current location gotten Succesfully</string>
    <string name="check_network">no internet check your network please </string>
    <string name="noCountry">no enter net and this place didn\'t found in your local data</string>
    <string name="map_selection">chosen country gotten successfully</string>
    <string name="fav_map_selection">this country saved to favorite successfully</string>
    <string name="frome">Frome</string>
    <string name="to">to</string>
    <string name="save">save</string>
    <string name="channel_name">channel name</string>
    <string name="channel_description">channel description</string>
    <string name="ok">OK</string>
    <string name="today">Today</string>

    <!-- Preference Titles -->
    <string name="messages_header" translatable="false">Messages</string>
    <string name="sync_header" translatable="false">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title" translatable="false">Your signature</string>
    <string name="reply_title" translatable="false">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title" translatable="false">Sync email periodically</string>
    <string name="attachment_title" translatable="false">Download incoming attachments</string>
    <string name="attachment_summary_on" translatable="false">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off" translatable="false">Only download attachments when manually requested</string>


</resources>