<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.weatherforecast.ui.view.fragment.HomeFragment"
        android:label="@string/home">
        <action
            android:id="@+id/action_homeFragment_to_map2"
            app:destination="@id/map" >
            <argument
                android:name="mapArg"
                app:argType="boolean"
                android:defaultValue="false"
                />
        </action>
    </fragment>
    <fragment
        android:id="@+id/map"
        android:name="com.example.weatherforecast.ui.map.view.Map"
        android:label="@string/map_title"
        tools:layout="@layout/fragment_map" />
    <fragment
        android:id="@+id/favoriteFragment"
        android:name="com.example.weatherforecast.ui.favorite.view.FavoriteFragment"
        android:label="@string/favorite">
        <action
            android:id="@+id/action_favoriteFragment_to_map2"
            app:destination="@id/map" >
            <argument
                android:name="mapArg"
                app:argType="boolean"
                android:defaultValue="true"
                />
        </action>
        <action
            android:id="@+id/action_favoriteFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/settingFragment"
        android:name="com.example.weatherforecast.ui.view.fragment.SettingFragment"
        android:label="@string/setting" >
        <action
            android:id="@+id/action_settingFragment_to_map"
            app:destination="@id/map" >
            <argument
                android:name="mapArg"
                app:argType="boolean"
                android:defaultValue="false"
                />
        </action>
    </fragment>
    <fragment
        android:id="@+id/alertFragment"
        android:name="com.example.weatherforecast.ui.view.fragment.AlertFragment"
        android:label="@string/alert" />
</navigation>