<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/dark">

    <androidx.cardview.widget.CardView
        android:id="@+id/language"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingEnd="32dp"
            android:background="@color/dark">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/language"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold"

                />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <RadioButton

                    android:id="@+id/englishRadio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/english"
                    android:textColor="@color/white"/>

                <RadioButton
                    android:id="@+id/arabicRadio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/arabic"
                    android:textColor="@color/white"/>
            </RadioGroup>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="16dp"
        android:layout_alignParentEnd="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/dark"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/location"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold"

                />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <RadioButton
                    android:id="@+id/gpsRadio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gps"
                    android:textColor="@color/white"/>

                <RadioButton
                    android:id="@+id/mapRadio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/map"
                    android:textColor="@color/white"/>
            </RadioGroup>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/language"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/dark">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/units"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold"

                />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                >


                <RadioButton
                    android:id="@+id/celsiusRadio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/celsius"
                    android:textColor="@color/white"/>

                <RadioButton
                    android:id="@+id/fahrenhietRadio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fahrenheit"
                    android:textColor="@color/white"/>

                <RadioButton
                    android:id="@+id/kelvinRadio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/kelvin"
                    android:textColor="@color/white"/>
            </RadioGroup>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</RelativeLayout>